--- a/config.json
+++ b/config.json
@@ -1,22 +1,22 @@
 {
-    "ownerNumber": "6285718366706@s.whatsapp.net",
-    "ownerName": "ALAN BOTZ",
-    "limitCount": 30,
+    "ownerNumber": "6289601027640@s.whatsapp.net",
+    "ownerName": "®Ridho",
+    "limitCount": 1000,
     "gamewaktu": 60,
-    "botName": "ALAN BOTZ",
+    "botName": "DINOBOTZV1",
     "pathImg": "./media/Itsuki.jpg",
     "apikey": "apikey is here",
-    "fake": "ALAN BOTZ VERIFIED",
+    "fake": "DINOBOTZ VERIFIED",
     "sesidInsta": "default",
     "sessionName": "aqulzz",
-    "txtDonasi": "GOPAY : 085718366706\nSaweeria :https://saweria.co/alanbotz\nPulsa : 085718366706",
+    "txtDonasi": "GOPAY : 089601027640\nSaweeria :https://saweria.co/NgxStickBG\nPulsa : 0896010276409!)",
     "gcount": {
         "prem": 40,
         "user": 20
     },
     "emote":{
         "free": "◽",
-        "owner": "◾",
+        "owner": "👑",
         "limit": "🔸",
         "glimit": "🔹",
         "prem": "💰"
